[ add ] navbar、banner、footer

--- a/app/index.html
+++ b/app/index.html
@@ -5,21 +5,21 @@ engine: ejs
 current: index
 ---
 <!-- banner -->
-<figure class="banner d-flex align-items-center">
+<figure class="banner banner__index d-flex align-items-center">
   <div class="container">
     <div class="row">
       <div class="col-md-1">
         <p class="invisible d-none d-md-block">健身輕時尚</p>
       </div>
       <div class="col-md-5">
-        <h2 class="text-white mb-4">
+        <span>健身輕時尚</span>
+        <h2 class="fz-huge">
           DOYOGA，做你的瑜珈
         </h2>
-        <p>多給自己一點時間享受靜謐，傾聽內心的聲音。</p>
-        <p>DOYO</p>
+        <p class="fz-larger mb-4">多給自己一點時間享受靜謐，傾聽內心的聲音。</p>
         <div class="d-flex justify-content-between justify-content-sm-start">
-          <a href="#" class="btn btn-light py-3 px-10 px-sm-12 me-2 d-block text-nowrap w-100">立即預約</a>
-          <a href="#" class="btn btn-secondary py-3 px-10 px-sm-12 d-block text-nowrap w-100">課程介紹</a>
+          <a href="#" class="btn btn-light btn-lg text-info me-2">立即預約</a>
+          <a href="#" class="btn btn-secondary btn-lg text-light">課程介紹</a>
         </div>
       </div>
     </div>
