[ add ] index section2

--- a/app/index.html
+++ b/app/index.html
@@ -11,18 +11,98 @@ current: index
       <div class="col-md-1">
         <p class="invisible d-none d-md-block">健身輕時尚</p>
       </div>
-      <div class="col-md-5">
+      <div class="col">
         <span>健身輕時尚</span>
         <h2 class="fz-huge">
           DOYOGA，做你的瑜珈
         </h2>
         <p class="fz-larger mb-4">多給自己一點時間享受靜謐，傾聽內心的聲音。</p>
-        <div class="d-flex justify-content-between justify-content-sm-start">
-          <a href="#" class="btn btn-light btn-lg text-info me-2">立即預約</a>
-          <a href="#" class="btn btn-secondary btn-lg text-light">課程介紹</a>
+        <div class="d-flex">
+          <a href="#" class="btn btn-light btn-lg text-info me-2 d-block">立即預約</a>
+          <a href="#" class="btn btn-secondary btn-lg text-light d-block">課程介紹</a>
         </div>
       </div>
     </div>
   </div>
 </figure>
+
+<!-- section 1 感受身心，活在當下 -->
+<section class="container pt-8 pt-lg-10 pb-12 pb-lg-16">
+  <h2 class="text-primary fw-medium fz-x-large text-center mb-1">感受身心，活在當下</h2>
+  <p class="text-secondary fz-large text-center mb-6 mb-lg-8">DOYOGA 可以帶給你...</p>
+  <ul class="list-unstyled row">
+    <li class="col-md-4 mb-4 mb-md-0">
+      <figure class="position-relative">
+        <img src="https://images.unsplash.com/photo-1593810450967-f9c42742e326?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=752&q=80" alt="整體健身" class="img img__index__section1 rounded-4">
+        <figcaption class="text-white p-6 p-md-4 p-lg-6 pb position-absolute bottom-0 start-50 translate-middle-x w-100">
+          <h3 class="fz-large">整體健身</h3>
+          <p class="">每一個動作，都融入運動解剖學的的觀點強調以身體的中心線為出發點。</p>
+        </figcaption>
+      </figure>
+    </li>
+    <li class="col-md-4 mb-4 mb-md-0">
+      <figure class="position-relative">
+        <img src="https://images.unsplash.com/photo-1593810451137-5dc55105dace?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=752&q=80" alt="整體健身" class="img img__index__section1 rounded-4">
+        <figcaption class="text-white p-6 p-md-4 p-lg-6 pb position-absolute bottom-0 start-50 translate-middle-x w-100">
+          <h3 class="fz-large">減壓放鬆</h3>
+          <p class="">調節全身系統、改善血液循環、減壓養心、釋放身心，達到修心養性的目的。</p>
+        </figcaption>
+      </figure>
+    </li>
+    <li class="col-md-4 mb-4 mb-md-0">
+      <figure class="position-relative">
+        <img src="https://images.unsplash.com/photo-1599901860904-17e6ed7083a0?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="整體健身" class="img img__index__section1 rounded-4">
+        <figcaption class="text-white p-6 p-md-4 p-lg-6 pb position-absolute bottom-0 start-50 translate-middle-x w-100">
+          <h3 class="fz-large">局部雕塑</h3>
+          <p class="">幫助強化背部與腹部的核心肌群，增進我們身體穩定度以及保持良好體態。</p>
+        </figcaption>
+      </figure>
+    </li>
+  </ul>
+</section>
+
+<!-- section 2 頂尖師資、專業教學-->
+<section class="container-fluid py-8 py-lg-16 bg-light">
+  <div class="container">
+    <div class="row">
+      <!-- 左圖 -->
+      <div class="col-md-6 d-none d-lg-block">
+        <img src="https://images.unsplash.com/photo-1540206276207-3af25c08abc4?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80" alt="頂尖師資、專業教學" class="img img__index__section2 rounded-4">
+      </div>
+      <!-- 右文案 -->
+      <div class="col-lg-6">
+        <h2 class="text-primary fw-medium fz-x-large text-center text-lg-start mb-1">頂尖師資、專業教學</h2>
+        <p class="text-secondary fz-large text-center text-lg-start mb-6">
+          強力師資，經歷豐富，協會認證。<br>
+          運用引導式教學，針對不同需求的人制定專屬課程。
+        </p>
+        <ul class="list-unstyled">
+          <li class="d-flex align-items-center p-4 py-md-10 ps-md-12 bg-white rounded-4 ms-md-20 ms-lg-n20">
+            <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/yoga-week8/teacher-1.png?raw=true" alt="Carol Tang" class="icon icon-x-large icon-md-huger me-4 me-md-5">
+            <div>
+              <h3 class="fz-large mb-1">Carol Tang 老師</h3>
+              <p>教學經歷 10 年</p>
+              <p>瑜珈讓我重新認識自己的身體，也讓我有了不一樣的人生。</p>
+            </div>
+          </li>
+          <li class="d-flex align-items-center p-4 py-md-6 ps-md-8 my-4 bg-white rounded-4 ms-md-43 ms-lg-0">
+            <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/yoga-week8/teacher-2.png?raw=true" alt="Kanae" class="icon icon-x-large icon-md-huge me-4 me-md-5">
+            <div>
+              <h3 class="fz-large mb-1">Kanae 老師</h3>
+              <p>教學經歷 10 年</p>
+            </div>
+          </li>
+          <li class="d-flex align-items-center p-4 py-md-6 ps-md-8 bg-white rounded-4 ms-md-43 ms-lg-0">
+            <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/yoga-week8/teacher-3.png?raw=true" alt="Asa Ifrit" class="icon icon-x-large icon-md-huge me-4 me-md-5">
+            <div>
+              <h3 class="fz-large mb-1">Asa Ifrit 老師</h3>
+              <p>教學經歷 10 年</p>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</section>
+
 
