--- a/app/index.html
+++ b/app/index.html
@@ -26,14 +26,14 @@ current: index
   </div>
 </figure>
 
-<!-- section 1 感受身心，活在當下 -->
+<!-- advantage 感受身心，活在當下 -->
 <section class="container pt-8 pt-lg-10 pb-12 pb-lg-16">
   <h2 class="text-primary fw-medium fz-x-large text-center mb-1">感受身心，活在當下</h2>
   <p class="text-secondary fz-large text-center mb-6 mb-lg-8">DOYOGA 可以帶給你...</p>
   <ul class="list-unstyled row">
     <li class="col-md-4 mb-4 mb-md-0">
       <figure class="position-relative">
-        <img src="https://images.unsplash.com/photo-1593810450967-f9c42742e326?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=752&q=80" alt="整體健身" class="img img__index__section1 rounded-4">
+        <img src="https://images.unsplash.com/photo-1593810450967-f9c42742e326?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=752&q=80" alt="整體健身" class="img img__advantage rounded-4">
         <figcaption class="text-white p-6 p-md-4 p-lg-6 pb position-absolute bottom-0 start-50 translate-middle-x w-100">
           <h3 class="fz-large">整體健身</h3>
           <p class="">每一個動作，都融入運動解剖學的的觀點強調以身體的中心線為出發點。</p>
@@ -42,7 +42,7 @@ current: index
     </li>
     <li class="col-md-4 mb-4 mb-md-0">
       <figure class="position-relative">
-        <img src="https://images.unsplash.com/photo-1593810451137-5dc55105dace?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=752&q=80" alt="整體健身" class="img img__index__section1 rounded-4">
+        <img src="https://images.unsplash.com/photo-1593810451137-5dc55105dace?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=752&q=80" alt="整體健身" class="img img__advantage rounded-4">
         <figcaption class="text-white p-6 p-md-4 p-lg-6 pb position-absolute bottom-0 start-50 translate-middle-x w-100">
           <h3 class="fz-large">減壓放鬆</h3>
           <p class="">調節全身系統、改善血液循環、減壓養心、釋放身心，達到修心養性的目的。</p>
@@ -51,7 +51,7 @@ current: index
     </li>
     <li class="col-md-4 mb-4 mb-md-0">
       <figure class="position-relative">
-        <img src="https://images.unsplash.com/photo-1599901860904-17e6ed7083a0?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="整體健身" class="img img__index__section1 rounded-4">
+        <img src="https://images.unsplash.com/photo-1599901860904-17e6ed7083a0?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="整體健身" class="img img__advantage rounded-4">
         <figcaption class="text-white p-6 p-md-4 p-lg-6 pb position-absolute bottom-0 start-50 translate-middle-x w-100">
           <h3 class="fz-large">局部雕塑</h3>
           <p class="">幫助強化背部與腹部的核心肌群，增進我們身體穩定度以及保持良好體態。</p>
@@ -61,13 +61,13 @@ current: index
   </ul>
 </section>
 
-<!-- section 2 頂尖師資、專業教學-->
+<!-- teacher 頂尖師資、專業教學-->
 <section class="container-fluid py-8 py-lg-16 bg-light">
   <div class="container">
     <div class="row">
       <!-- 左圖 -->
       <div class="col-md-6 d-none d-lg-block">
-        <img src="https://images.unsplash.com/photo-1540206276207-3af25c08abc4?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80" alt="頂尖師資、專業教學" class="img img__index__section2 rounded-4">
+        <img src="https://images.unsplash.com/photo-1540206276207-3af25c08abc4?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80" alt="頂尖師資、專業教學" class="img img__teacher rounded-4">
       </div>
       <!-- 右文案 -->
       <div class="col-lg-6">
@@ -100,6 +100,39 @@ current: index
             </div>
           </li>
         </ul>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- space 舒適空間、靜心放鬆-->
+<section class="container py-8 py-lg-16">
+  <div class="row">
+    <div class="col-md-6 order-md-1 d-flex justify-content-center align-items-center mb-4 mb-md-0">
+      <div>
+        <h2 class="text-primary fw-medium fz-x-large mb-1">舒適空間、靜心放鬆</h2>
+        <p class="text-secondary fz-large mb-4 mb-lg-6">
+          我們都渴望平靜安穩的生活，擁有一處能夠靜心的角落，安撫每天繁雜忙碌的心。
+        </p>
+        <a href="" class="btn btn-link px-0">
+          <div class="d-flex align-items-center">
+            環境介紹
+            <span class="material-icons-outlined ms-2">trending_flat</span>
+          </div>
+        </a>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="row">
+        <div class="col-6 col-md-8">
+          <img src="https://images.unsplash.com/photo-1575052814086-f385e2e2ad1b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="" class="img img__space__index rounded-4">
+        </div>
+        <div class="col-6 col-md-4">
+          <div class="d-flex flex-column img__space__index">
+            <img src="https://images.unsplash.com/photo-1608235375712-be654ace4420?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=667&q=80" alt="" class="img rounded-4 h-100 mb-md-75">
+            <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/yoga-week8/photo-1552196527-9a20ba4db2c3.jpeg?raw=true" alt="" class="img rounded-4 d-none d-md-block">
+          </div>
+        </div>
       </div>
     </div>
   </div>
