[ add ] index course、scheme

--- a/app/index.html
+++ b/app/index.html
@@ -42,7 +42,7 @@ current: index
     </li>
     <li class="col-md-4 mb-4 mb-md-0">
       <figure class="position-relative">
-        <img src="https://images.unsplash.com/photo-1593810451137-5dc55105dace?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=752&q=80" alt="整體健身" class="img img__advantage rounded-4">
+        <img src="https://images.unsplash.com/photo-1593810451137-5dc55105dace?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=752&q=80" alt="減壓放鬆" class="img img__advantage rounded-4">
         <figcaption class="text-white p-6 p-md-4 p-lg-6 pb position-absolute bottom-0 start-50 translate-middle-x w-100">
           <h3 class="fz-large">減壓放鬆</h3>
           <p class="">調節全身系統、改善血液循環、減壓養心、釋放身心，達到修心養性的目的。</p>
@@ -51,7 +51,7 @@ current: index
     </li>
     <li class="col-md-4 mb-4 mb-md-0">
       <figure class="position-relative">
-        <img src="https://images.unsplash.com/photo-1599901860904-17e6ed7083a0?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="整體健身" class="img img__advantage rounded-4">
+        <img src="https://images.unsplash.com/photo-1599901860904-17e6ed7083a0?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="局部雕塑" class="img img__advantage rounded-4">
         <figcaption class="text-white p-6 p-md-4 p-lg-6 pb position-absolute bottom-0 start-50 translate-middle-x w-100">
           <h3 class="fz-large">局部雕塑</h3>
           <p class="">幫助強化背部與腹部的核心肌群，增進我們身體穩定度以及保持良好體態。</p>
@@ -125,12 +125,12 @@ current: index
     <div class="col-md-6">
       <div class="row">
         <div class="col-6 col-md-8">
-          <img src="https://images.unsplash.com/photo-1575052814086-f385e2e2ad1b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="" class="img img__space__index rounded-4">
+          <img src="https://images.unsplash.com/photo-1575052814086-f385e2e2ad1b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="空間一" class="img img__space__index rounded-4">
         </div>
         <div class="col-6 col-md-4">
           <div class="d-flex flex-column img__space__index">
-            <img src="https://images.unsplash.com/photo-1608235375712-be654ace4420?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=667&q=80" alt="" class="img rounded-4 h-100 mb-md-75">
-            <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/yoga-week8/photo-1552196527-9a20ba4db2c3.jpeg?raw=true" alt="" class="img rounded-4 d-none d-md-block">
+            <img src="https://images.unsplash.com/photo-1608235375712-be654ace4420?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=667&q=80" alt="空間二" class="img rounded-4 h-100 mb-md-75">
+            <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/yoga-week8/photo-1552196527-9a20ba4db2c3.jpeg?raw=true" alt="空間三" class="img rounded-4 d-none d-md-block">
           </div>
         </div>
       </div>
@@ -138,4 +138,100 @@ current: index
   </div>
 </section>
 
+<!-- course 精心設計、課程多元-->
+<section class="container-fluid py-8 py-lg-16 bg-light">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 col-lg-5 d-flex justify-content-center align-items-center">
+        <div class="ms-lg-26">
+          <h2 class="text-primary fw-medium fz-x-large mb-1">精心設計、課程多元</h2>
+          <p class="text-secondary fz-large mb-4 mb-lg-6">
+            教師帶領多元課程，釋放壓力，與身心常見的緊繃不適溫柔和解。
+          </p>
+          <a href="" class="btn btn-link px-0">
+            <div class="d-flex align-items-center">
+              課程介紹
+              <span class="material-icons-outlined ms-2">trending_flat</span>
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <ul class="list-unstyled row flex-lg-nowrap">
+          <li class="col-6 col-lg-8 mb-4 md-md-6">
+            <img src="https://images.unsplash.com/flagged/photo-1573556291531-a5d957d7e4e7?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80" alt="課程一" class="img img__course__index rounded-4">
+          </li>
+          <li class="col-6 col-lg-8 mb-4 md-md-6">
+            <img src="https://images.unsplash.com/photo-1574454941059-9408c4d3f268?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="課程二" class="img img__course__index rounded-4">
+          </li>
+          <li class="col-6 col-lg-8">
+            <img src="https://images.unsplash.com/photo-1611077094726-11cf1f992009?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="課程三" class="img img__course__index rounded-4">
+          </li>
+          <li class="col-6 col-lg-8">
+            <img src="https://images.unsplash.com/photo-1601568870191-8c417f7e0077?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1834&q=80" alt="課程四" class="img img__course__index rounded-4">
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- scheme 方案選擇 -->
+<section class="container pt-8 pt-lg-10 pb-12 pb-lg-16">
+  <h2 class="text-primary fw-medium fz-x-large text-center mb-1">方案選擇</h2>
+  <p class="text-secondary fz-large text-center mb-6 mb-lg-8">DOYOGA 可以帶給你...</p>
+  <ul class="list-unstyled row">
+    <li class="col-lg-4">
+      <div class="card rounded-4 border-secondary">
+        <div class="row g-0">
+          <div class="col-md-6 col-lg-12">
+            <img src="https://images.unsplash.com/photo-1601568870191-8c417f7e0077?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1834&q=80" alt="首次體驗" class="img img__scheme__index">
+          </div>
+          <div class="col-md-6 col-lg-12 d-flex align-items-center">
+            <div class="card-body p-6">
+              <h3 class="fz-large mb-1 text-primary text-center">首次體驗</h3>
+              <p class="text-secondary mb-2 text-center">NT $450 / 次</p>
+              <p class="text-primary mb-10 mb-md-6 mb-lg-10">分基礎、中級、高級可以選擇。初次至 DOYOGA 上課建議選擇此方案。</p>
+              <a href="" class="btn btn-secondary d-block w-100 text-white">選擇課程</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </li>
+    <li class="col-lg-4 my-4 my-lg-0">
+      <div class="card rounded-4 border-secondary">
+        <div class="row g-0">
+          <div class="col-md-6 col-lg-12">
+            <img src="https://images.unsplash.com/photo-1552196563-55cd4e45efb3?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1826&q=80" alt="短期體驗" class="img img__scheme__index">
+          </div>
+          <div class="col-md-6 col-lg-12 d-flex align-items-center">
+            <div class="card-body p-6">
+              <h3 class="fz-large mb-1 text-primary text-center">短期體驗</h3>
+              <p class="text-secondary mb-2 text-center">NT $1800 / 月</p>
+              <p class="text-primary mb-10 mb-md-6 mb-lg-10">分基礎、中級、高級可以選擇。想試著培養瑜珈習慣者可以選擇此方案。</p>
+              <a href="" class="btn btn-secondary d-block w-100 text-white">選擇課程</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </li>
+    <li class="col-lg-4">
+      <div class="card rounded-4 border-secondary">
+        <div class="row g-0">
+          <div class="col-md-6 col-lg-12">
+            <img src="https://images.unsplash.com/photo-1603988363607-e1e4a66962c6?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="長期體驗" class="img img__scheme__index">
+          </div>
+          <div class="col-md-6 col-lg-12 d-flex align-items-center">
+            <div class="card-body p-6">
+              <h3 class="fz-large mb-1 text-primary text-center">長期體驗</h3>
+              <p class="text-secondary mb-2 text-center">NT $5600 / 月</p>
+              <p class="text-primary mb-10 mb-md-6 mb-lg-10">分基礎、中級、高級可以選擇。有長期習慣做瑜伽者建議選擇此方案。</p>
+              <a href="" class="btn btn-secondary d-block w-100 text-white">選擇課程</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </li>
+  </ul>
+</section>
 
