[ add ] index 評論

--- a/app/index.html
+++ b/app/index.html
@@ -65,11 +65,9 @@ current: index
 <section class="container-fluid py-8 py-lg-16 bg-light">
   <div class="container">
     <div class="row">
-      <!-- 左圖 -->
       <div class="col-md-6 d-none d-lg-block">
         <img src="https://images.unsplash.com/photo-1540206276207-3af25c08abc4?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80" alt="頂尖師資、專業教學" class="img img__teacher rounded-4">
       </div>
-      <!-- 右文案 -->
       <div class="col-lg-6">
         <h2 class="text-primary fw-medium fz-x-large text-center text-lg-start mb-1">頂尖師資、專業教學</h2>
         <p class="text-secondary fz-large text-center text-lg-start mb-6">
@@ -125,12 +123,12 @@ current: index
     <div class="col-md-6">
       <div class="row">
         <div class="col-6 col-md-8">
-          <img src="https://images.unsplash.com/photo-1575052814086-f385e2e2ad1b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="空間一" class="img img__space__index rounded-4">
+          <img src="https://images.unsplash.com/photo-1575052814086-f385e2e2ad1b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="空間一" class="img img__space__indexPrimary rounded-4">
         </div>
         <div class="col-6 col-md-4">
           <div class="d-flex flex-column img__space__index">
-            <img src="https://images.unsplash.com/photo-1608235375712-be654ace4420?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=667&q=80" alt="空間二" class="img rounded-4 h-100 mb-md-75">
-            <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/yoga-week8/photo-1552196527-9a20ba4db2c3.jpeg?raw=true" alt="空間三" class="img rounded-4 d-none d-md-block">
+            <img src="https://images.unsplash.com/photo-1608235375712-be654ace4420?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=667&q=80" alt="空間二" class="img img__space__indexSecondary rounded-4 mb-md-75">
+            <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/yoga-week8/photo-1552196527-9a20ba4db2c3.jpeg?raw=true" alt="空間三" class="img img__space__indexSecondary rounded-4 d-none d-md-block">
           </div>
         </div>
       </div>
@@ -157,7 +155,7 @@ current: index
         </div>
       </div>
       <div class="col-md-6">
-        <ul class="list-unstyled row flex-lg-nowrap">
+        <ul class="swiper list-unstyled row flex-lg-nowrap">
           <li class="col-6 col-lg-8 mb-4 md-md-6">
             <img src="https://images.unsplash.com/flagged/photo-1573556291531-a5d957d7e4e7?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80" alt="課程一" class="img img__course__index rounded-4">
           </li>
@@ -235,3 +233,135 @@ current: index
   </ul>
 </section>
 
+<!-- 聽聽他們怎麼說 -->
+<section class="container-fluid py-8 py-lg-16 bg-light">
+  <h2 class="text-primary fw-medium fz-x-large text-center mb-6 mb-md-8">聽聽他們怎麼說</h2>
+  <div class="swiper container">
+    <ul class="list-unstyled row flex-md-nowrap text-primary mb-4">
+      <li class="col-md-5 col-lg-4">
+        <div class="d-flex align-items-center p-4 bg-white rounded-4">
+          <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/yoga-week8/user-1.png?raw=true" alt="Joanne" class="icon icon-xx-large me-4 me-md-5">
+          <div class="">
+            <h3 class="d-flex align-items-center mb-2">
+              <span class="fz-medium me-2">Joanne</span>
+              <span class="fz-small">Oct 17 2020</span>
+            </h3>
+            <div class="d-flex mb-2">
+              <span class="material-icons-outlined">star</span>
+              <span class="material-icons-outlined">star</span>
+              <span class="material-icons-outlined">star</span>
+              <span class="material-icons-outlined">star</span>
+              <span class="material-icons-outlined">star</span>           
+            </div>
+            <p>服務很好、設備優良！</p>
+          </div>
+        </div>
+      </li>
+      <li class="col-md-5 col-lg-4 my-2 my-md-0">
+        <div class="d-flex align-items-center p-4 bg-white rounded-4">
+          <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/yoga-week8/user-2.png?raw=true" alt="Joanne" class="icon icon-xx-large me-4 me-md-5">
+          <div class="">
+            <h3 class="d-flex align-items-center mb-2">
+              <span class="fz-medium me-2">穎旻</span>
+              <span class="fz-small">Oct 17 2020</span>
+            </h3>
+            <div class="d-flex mb-2">
+              <span class="material-icons-outlined">star</span>
+              <span class="material-icons-outlined">star</span>
+              <span class="material-icons-outlined">star</span>
+              <span class="material-icons-outlined">star</span>
+              <span class="material-icons-outlined">star</span>           
+            </div>
+            <p>上課後身體健康很多</p>
+          </div>
+        </div>
+      </li>
+      <li class="col-md-5 col-lg-4">
+        <div class="d-flex align-items-center p-4 bg-white rounded-4">
+          <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/yoga-week8/user-3.png?raw=true" alt="Joanne" class="icon icon-xx-large me-4 me-md-5">
+          <div class="">
+            <h3 class="d-flex align-items-center mb-2">
+              <span class="fz-medium me-2">子琪</span>
+              <span class="fz-small">Oct 17 2020</span>
+            </h3>
+            <div class="d-flex mb-2">
+              <span class="material-icons-outlined">star</span>
+              <span class="material-icons-outlined">star</span>
+              <span class="material-icons-outlined">star</span>
+              <span class="material-icons-outlined">star</span>
+              <span class="material-icons-outlined">star</span>           
+            </div>
+            <p>上課很有趣！</p>
+          </div>
+        </div>
+      </li>
+    </ul>
+    <ul class="list-unstyled row flex-md-nowrap text-primary d-none d-md-flex">
+      <li class="col-md-5 col-lg-4">
+        <div class="d-flex align-items-center p-4 bg-white rounded-4">
+          <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/yoga-week8/user-4.png?raw=true" alt="Joanne" class="icon icon-xx-large me-4 me-md-5">
+          <div class="">
+            <h3 class="d-flex align-items-center mb-2">
+              <span class="fz-medium me-2">葉子</span>
+              <span class="fz-small">Oct 17 2020</span>
+            </h3>
+            <div class="d-flex mb-2">
+              <span class="material-icons-outlined">star</span>
+              <span class="material-icons-outlined">star</span>
+              <span class="material-icons-outlined">star</span>
+              <span class="material-icons-outlined">star</span>
+              <span class="material-icons-outlined">star</span>           
+            </div>
+            <p>老師的教學很專業</p>
+          </div>
+        </div>
+      </li>
+      <li class="col-md-5 col-lg-4">
+        <div class="d-flex align-items-center p-4 bg-white rounded-4">
+          <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/yoga-week8/user-5.png?raw=true" alt="Joanne" class="icon icon-xx-large me-4 me-md-5">
+          <div class="">
+            <h3 class="d-flex align-items-center mb-2">
+              <span class="fz-medium me-2">Ray</span>
+              <span class="fz-small">Oct 17 2020</span>
+            </h3>
+            <div class="d-flex mb-2">
+              <span class="material-icons-outlined">star</span>
+              <span class="material-icons-outlined">star</span>
+              <span class="material-icons-outlined">star</span>
+              <span class="material-icons-outlined">star</span>
+              <span class="material-icons-outlined">star</span>           
+            </div>
+            <p>很舒壓</p>
+          </div>
+        </div>
+      </li>
+      <li class="col-md-5 col-lg-4">
+        <div class="d-flex align-items-center p-4 bg-white rounded-4">
+          <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/yoga-week8/uset-6.png?raw=true" alt="Joanne" class="icon icon-xx-large me-4 me-md-5">
+          <div class="">
+            <h3 class="d-flex align-items-center mb-2">
+              <span class="fz-medium me-2">俊儀</span>
+              <span class="fz-small">Oct 17 2020</span>
+            </h3>
+            <div class="d-flex mb-2">
+              <span class="material-icons-outlined">star</span>
+              <span class="material-icons-outlined">star</span>
+              <span class="material-icons-outlined">star</span>
+              <span class="material-icons-outlined">star</span>
+              <span class="material-icons-outlined">star</span>           
+            </div>
+            <p>讚的！</p>
+          </div>
+        </div>
+      </li>
+    </ul>
+    <div class="d-flex d-md-none mb-1">
+      <button type="button" class="icon--reverseX btn btn-link px-0 me-auto">
+        <span class="material-icons-outlined fz-huge">trending_flat</span>
+      </button>
+      <button type="button" class="btn btn-link px-0">
+        <span class="material-icons-outlined fz-huge">trending_flat</span>
+      </button>
+    </div>
+  </div>
+</section>
