--- a/app/reservation.html
+++ b/app/reservation.html
@@ -9,10 +9,12 @@ current: reservation
   <!-- 立即預約 -->
   <section class="mb-10 mb-md-12 mb-lg-4">
     <h2 class="text-primary fz-x-large text-center mb-6 mb-md-4">立即預約</h2>
-    <div class="d-flex justify-content-center mb-8">
-      <input type="button" value="選擇方案" class="btn btn-primary rounded-4 text-white px-3 px-lg-12">
-      <input type="button" value="填寫資料" class="btn btn-light rounded-4 text-primary px-3 px-lg-12 mx-4 mx-md-75">
-      <input type="button" value="完成預約" class="btn btn-light rounded-4 text-primary px-3 px-lg-12">
+    <div class="row justify-content-center mb-8">
+      <div class="col-md-6 col-lg-5 d-flex justify-content-between mx-auto">
+        <input type="button" value="選擇方案" class="btn btn-primary rounded-4 text-white px-3 px-lg-6 px-xl-10">
+        <input type="button" value="填寫資料" class="btn btn-light rounded-4 text-primary px-3 px-lg-6 px-xl-10">
+        <input type="button" value="完成預約" class="btn btn-light rounded-4 text-primary px-3 px-lg-6 px-xl-10">
+      </div>
     </div>
     <ul class="list-unstyled row">
       <li class="col-lg-4">
@@ -151,7 +153,7 @@ current: reservation
         </ol>
         <div class="row">
           <div class="col-6 mx-auto">
-            <a href="reservation-2.html" class="btn btn-secondary text-white d-block w-100">繼續預約</a>
+            <a href="reservation-2.html" class="btn btn-secondary text-white fz-large d-block w-100">繼續預約</a>
           </div>
         </div>
       </div>
