[ add ] 聯絡我們並修正文字顏色

--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@ current: index
 <!-- banner -->
 <figure class="banner banner__index d-flex align-items-center">
   <div class="container">
-    <div class="row">
+    <div class="row text-info">
       <div class="col-md-1">
         <p class="invisible d-none d-md-block">健身輕時尚</p>
       </div>
@@ -28,7 +28,7 @@ current: index
 
 <!-- advantage 感受身心，活在當下 -->
 <section class="container pt-8 pt-lg-10 pb-12 pb-lg-16">
-  <h2 class="text-primary fw-medium fz-x-large text-center mb-1">感受身心，活在當下</h2>
+  <h2 class="fw-medium fz-x-large text-center mb-1">感受身心，活在當下</h2>
   <p class="text-secondary fz-large text-center mb-6 mb-lg-8">DOYOGA 可以帶給你...</p>
   <ul class="list-unstyled row">
     <li class="col-md-4 mb-4 mb-md-0">
@@ -69,7 +69,7 @@ current: index
         <img src="https://images.unsplash.com/photo-1540206276207-3af25c08abc4?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80" alt="頂尖師資、專業教學" class="img img__teacher rounded-4">
       </div>
       <div class="col-lg-6">
-        <h2 class="text-primary fw-medium fz-x-large text-center text-lg-start mb-1">頂尖師資、專業教學</h2>
+        <h2 class="fw-medium fz-x-large text-center text-lg-start mb-1">頂尖師資、專業教學</h2>
         <p class="text-secondary fz-large text-center text-lg-start mb-6">
           強力師資，經歷豐富，協會認證。<br>
           運用引導式教學，針對不同需求的人制定專屬課程。
@@ -108,7 +108,7 @@ current: index
   <div class="row">
     <div class="col-md-6 order-md-1 d-flex justify-content-center align-items-center mb-4 mb-md-0">
       <div>
-        <h2 class="text-primary fw-medium fz-x-large mb-1">舒適空間、靜心放鬆</h2>
+        <h2 class="fw-medium fz-x-large mb-1">舒適空間、靜心放鬆</h2>
         <p class="text-secondary fz-large mb-4 mb-lg-6">
           我們都渴望平靜安穩的生活，擁有一處能夠靜心的角落，安撫每天繁雜忙碌的心。
         </p>
@@ -142,7 +142,7 @@ current: index
     <div class="row">
       <div class="col-md-6 col-lg-5 d-flex justify-content-center align-items-center">
         <div class="ms-lg-26">
-          <h2 class="text-primary fw-medium fz-x-large mb-1">精心設計、課程多元</h2>
+          <h2 class="fw-medium fz-x-large mb-1">精心設計、課程多元</h2>
           <p class="text-secondary fz-large mb-4 mb-lg-6">
             教師帶領多元課程，釋放壓力，與身心常見的緊繃不適溫柔和解。
           </p>
@@ -176,7 +176,7 @@ current: index
 
 <!-- scheme 方案選擇 -->
 <section class="container pt-8 pt-lg-10 pb-12 pb-lg-16">
-  <h2 class="text-primary fw-medium fz-x-large text-center mb-1">方案選擇</h2>
+  <h2 class="fw-medium fz-x-large text-center mb-1">方案選擇</h2>
   <p class="text-secondary fz-large text-center mb-6 mb-lg-8">DOYOGA 可以帶給你...</p>
   <ul class="list-unstyled row">
     <li class="col-lg-4">
@@ -187,9 +187,9 @@ current: index
           </div>
           <div class="col-md-6 col-lg-12 d-flex align-items-center">
             <div class="card-body p-6">
-              <h3 class="fz-large mb-1 text-primary text-center">首次體驗</h3>
+              <h3 class="fz-large mb-1 text-center">首次體驗</h3>
               <p class="text-secondary mb-2 text-center">NT $450 / 次</p>
-              <p class="text-primary mb-10 mb-md-6 mb-lg-10">分基礎、中級、高級可以選擇。初次至 DOYOGA 上課建議選擇此方案。</p>
+              <p class="mb-10 mb-md-6 mb-lg-10">分基礎、中級、高級可以選擇。初次至 DOYOGA 上課建議選擇此方案。</p>
               <a href="" class="btn btn-secondary d-block w-100 text-white">選擇課程</a>
             </div>
           </div>
@@ -204,9 +204,9 @@ current: index
           </div>
           <div class="col-md-6 col-lg-12 d-flex align-items-center">
             <div class="card-body p-6">
-              <h3 class="fz-large mb-1 text-primary text-center">短期體驗</h3>
+              <h3 class="fz-large mb-1 text-center">短期體驗</h3>
               <p class="text-secondary mb-2 text-center">NT $1800 / 月</p>
-              <p class="text-primary mb-10 mb-md-6 mb-lg-10">分基礎、中級、高級可以選擇。想試著培養瑜珈習慣者可以選擇此方案。</p>
+              <p class="mb-10 mb-md-6 mb-lg-10">分基礎、中級、高級可以選擇。想試著培養瑜珈習慣者可以選擇此方案。</p>
               <a href="" class="btn btn-secondary d-block w-100 text-white">選擇課程</a>
             </div>
           </div>
@@ -221,9 +221,9 @@ current: index
           </div>
           <div class="col-md-6 col-lg-12 d-flex align-items-center">
             <div class="card-body p-6">
-              <h3 class="fz-large mb-1 text-primary text-center">長期體驗</h3>
+              <h3 class="fz-large mb-1 text-center">長期體驗</h3>
               <p class="text-secondary mb-2 text-center">NT $5600 / 月</p>
-              <p class="text-primary mb-10 mb-md-6 mb-lg-10">分基礎、中級、高級可以選擇。有長期習慣做瑜伽者建議選擇此方案。</p>
+              <p class="mb-10 mb-md-6 mb-lg-10">分基礎、中級、高級可以選擇。有長期習慣做瑜伽者建議選擇此方案。</p>
               <a href="" class="btn btn-secondary d-block w-100 text-white">選擇課程</a>
             </div>
           </div>
@@ -235,9 +235,9 @@ current: index
 
 <!-- 聽聽他們怎麼說 -->
 <section class="container-fluid py-8 py-lg-16 bg-light">
-  <h2 class="text-primary fw-medium fz-x-large text-center mb-6 mb-md-8">聽聽他們怎麼說</h2>
+  <h2 class="fw-medium fz-x-large text-center mb-6 mb-md-8">聽聽他們怎麼說</h2>
   <div class="swiper container">
-    <ul class="list-unstyled row flex-md-nowrap text-primary mb-4">
+    <ul class="list-unstyled row flex-md-nowrap mb-4">
       <li class="col-md-5 col-lg-4">
         <div class="d-flex align-items-center p-4 bg-white rounded-4">
           <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/yoga-week8/user-1.png?raw=true" alt="Joanne" class="icon icon-xx-large me-4 me-md-5">
@@ -296,7 +296,7 @@ current: index
         </div>
       </li>
     </ul>
-    <ul class="list-unstyled row flex-md-nowrap text-primary d-none d-md-flex">
+    <ul class="list-unstyled row flex-md-nowrap d-none d-md-flex">
       <li class="col-md-5 col-lg-4">
         <div class="d-flex align-items-center p-4 bg-white rounded-4">
           <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/yoga-week8/user-4.png?raw=true" alt="Joanne" class="icon icon-xx-large me-4 me-md-5">
