--- a/app/reservation-2.html
+++ b/app/reservation-2.html
@@ -105,26 +105,26 @@ current: reservation-2
               <h3 class="mb-4 fw-normal fz-medium">5. 填寫基本資料，完成預約後會寄送通知至電子信箱</h3>
               <ul class="list-unstyled row">
                 <li class="col-6">
-                  <label for="userName" class="form-label text-primary">姓名</label>
+                  <label for="userName" class="form-label">姓名</label>
                   <input type="text" class="form-control border-secondary" id="userName" placeholder="請輸入您的姓名">
                 </li>
                 <li class="col-6 mb-4">
-                  <label for="userAge" class="form-label text-primary">年齡</label>
+                  <label for="userAge" class="form-label">年齡</label>
                   <input type="number" class="form-control border-secondary" id="userAge" placeholder="請輸入您的年齡">
                 </li>
                 <li class="col-3 mb-4">
-                  <label for="userSex" class="form-label text-primary">性別</label>
+                  <label for="userSex" class="form-label">性別</label>
                   <select class="form-select border-secondary">
                     <option selected value="female">女</option>
                     <option value="male">男</option>
                   </select>
                 </li>
                 <li class="col-12 mb-4">
-                  <label for="userEmail" class="form-label text-primary">電子信箱</label>
+                  <label for="userEmail" class="form-label">電子信箱</label>
                   <input type="email" class="form-control border-secondary" id="userEmail" placeholder="email@example.com">
                 </li>
                 <li class="col-12">
-                  <label for="userPhone" class="form-label text-primary">手機號碼</label>
+                  <label for="userPhone" class="form-label">手機號碼</label>
                   <input type="tel" class="form-control border-secondary" id="userPhone" placeholder="0912-345-678">
                 </li>
               </ul>
