--- a/app/reservation.html
+++ b/app/reservation.html
@@ -27,15 +27,15 @@ current: reservation
             </div>
             <div class="col-md-6 col-lg-12 d-flex align-items-center">
               <div class="card-body p-6">
-                <h3 class="fz-large mb-1 text-primary text-center">首次體驗</h3>
+                <h3 class="fz-large mb-1 text-center">首次體驗</h3>
                 <p class="text-secondary mb-2 text-center">NT $450 / 次</p>
-                <p class="text-primary mb-10 mb-md-6 mb-lg-10">分基礎、中級、高級可以選擇。初次至 DOYOGA 上課建議選擇此方案。</p>
+                <p class="mb-10 mb-md-6 mb-lg-10">分基礎、中級、高級可以選擇。初次至 DOYOGA 上課建議選擇此方案。</p>
                 <a type="button" class="btn btn-secondary d-block w-100 text-white stretched-link">選擇課程</a>
               </div>
             </div>
           </div>
         </div>
-        <span class="material-icons-outlined fz-huger text-primary d-block text-center my-4">arrow_drop_down</span>
+        <span class="material-icons-outlined fz-huger d-block text-center my-4">arrow_drop_down</span>
       </li>
       <li class="col-lg-4 my-4 my-lg-0">
         <div class="card rounded-4 border-secondary">
@@ -47,9 +47,9 @@ current: reservation
             </div>
             <div class="col-md-6 col-lg-12 d-flex align-items-center">
               <div class="card-body p-6">
-                <h3 class="fz-large mb-1 text-primary text-center">短期體驗</h3>
+                <h3 class="fz-large mb-1 text-center">短期體驗</h3>
                 <p class="text-secondary mb-2 text-center">NT $1800 / 月</p>
-                <p class="text-primary mb-10 mb-md-6 mb-lg-10">分基礎、中級、高級可以選擇。想試著培養瑜珈習慣者可以選擇此方案。</p>
+                <p class="mb-10 mb-md-6 mb-lg-10">分基礎、中級、高級可以選擇。想試著培養瑜珈習慣者可以選擇此方案。</p>
                 <a type="button" class="btn btn-secondary d-block w-100 text-white stretched-link">選擇課程</a>
               </div>
             </div>
@@ -66,9 +66,9 @@ current: reservation
             </div>
             <div class="col-md-6 col-lg-12 d-flex align-items-center">
               <div class="card-body p-6">
-                <h3 class="fz-large mb-1 text-primary text-center">長期體驗</h3>
+                <h3 class="fz-large mb-1 text-center">長期體驗</h3>
                 <p class="text-secondary mb-2 text-center">NT $5600 / 月</p>
-                <p class="text-primary mb-10 mb-md-6 mb-lg-10">分基礎、中級、高級可以選擇。有長期習慣做瑜伽者建議選擇此方案。</p>
+                <p class="mb-10 mb-md-6 mb-lg-10">分基礎、中級、高級可以選擇。有長期習慣做瑜伽者建議選擇此方案。</p>
                 <a type="button" class="btn btn-secondary d-block w-100 text-white stretched-link">選擇課程</a>
               </div>
             </div>
@@ -134,7 +134,7 @@ current: reservation
         </li>
       </ul>
     </div>
-    <div class="text-primary text-center mb-10">
+    <div class="text-center mb-10">
       <p class="mb-1">您選擇的是</p>
       <p class="text-decoration-underline fz-large">首次體驗課程-基礎</p>
     </div>
@@ -142,8 +142,8 @@ current: reservation
 
   <!-- 預約須知 -->
   <section>
-    <h2 class="text-primary  fz-x-large text-center mb-6 mb-md-4">預約須知</h2>
-    <div class="row text-primary">
+    <h2 class="fz-x-large text-center mb-6 mb-md-4">預約須知</h2>
+    <div class="row">
       <div class="col-md-6 mx-auto">
         <ol class="mb-8">
           <li>如果有特殊體質、特殊狀況，請主動告知。</li>
