--- a/app/reservation-done.html
+++ b/app/reservation-done.html
@@ -17,7 +17,7 @@ current: reservation-done
       </div>
     </div>
     <!-- 已完成預約 -->
-    <p class="text-center text-primary d-flex flex-column mb-8">
+    <p class="text-center d-flex flex-column mb-8">
       <span class="material-icons-outlined fz-huger text-center mb-5">check_circle</span>
       <span class="fz-large fw-normal">已完成預約，以下是您的預約資訊:</span>
     </p>
@@ -33,10 +33,10 @@ current: reservation-done
             <div id="reservationInfo" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
               <div class="accordion-body py-4 px-5">
                 <p class="mb-4">
-                  <span class="me-4 fw-medium text-primary">您選擇的是</span>
+                  <span class="me-4 fw-medium">您選擇的是</span>
                   <span class="fz-large text-secondary">首次體驗課程-基礎</span>
                 </p>
-                <ul class="list-unstyled text-primary">
+                <ul class="list-unstyled">
                   <li class="mb-2">
                     <p>上課預約報到日：2021/07/21</p>
                   </li>
@@ -63,7 +63,7 @@ current: reservation-done
 
         <!-- 上課注意事項 -->
         <div class="row">
-          <div class="col-md-8 text-primary mx-auto">
+          <div class="col-md-8 mx-auto">
             <h3 class="text-center fz-large fw-normal mb-2">上課注意事項</h3>
             <p class="mb-8">第一次上課請提前 10-15 分鐘至櫃檯報到，請攜帶毛巾、水 .穿著運動服、乾淨室內運動鞋。 如欲更改體驗時間請提前通知我們喔！</p>
             <a href="index.html" class="btn btn-secondary text-white d-block w-100">返回首頁</a>
